[package]
name = "moulinette"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
caps = "0.5.5"
tempdir = "0.3.7"
fs_extra = "1.2.0"
anyhow = "1.0.66"
seccomp-sys = "0.1.3"
syscall-numbers = "3.0.0"
libc = "0.2.137"
rand = "0.8.5"