[package]
name = "moulinette"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
caps = "0.5.5"
tempdir = "0.3.7"
fs_extra = "1.2.0"
anyhow = "1.0.66"
seccomp-sys = "0.1.3"
syscall-numbers = "3.0.0"
libc = "0.2.137"
rand = "0.8.5"
reqwest = {version = "0.11.13", features = ["blocking", "json"]}
serde = {version = "1.0.148", features = ["derive"]}
serde_json = "1.0.89"
tar = "0.4.38"
flate2 = "1.0.25"
log = "0.4.17"
env_logger = "0.9.3"